テストユーザ情報修正

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -8,6 +8,11 @@ a:hover{
   color: black;
 }
 
+.testuser{
+  font-size: 14px;
+  font-weight: normal;
+}
+
 .shop-card-wrapper{
   display: flex;
 }
